--- a/index.html
+++ b/index.html
@@ -158,35 +158,35 @@ interactive web <br> experience using frontend modern technology.</p>
         </div>
         <div class="work-grid">
           <div class="work-item" data-category="design uiux">
-            <img src="images/image1.png" alt="Tech Startup" loading="lazy"/>
+            <img src="Images/image1.png" alt="Tech Startup" loading="lazy"/>
             <div class="overlay">
               <h3>Tech Startup</h3>
               <p>This project was about product design and dashboard.</p>
             </div>
           </div>
           <div class="work-item" data-category="app uiux">
-            <img src="images/image2.png" loading="lazy" alt="Fintech" />
+            <img src="Images/image2.png" loading="lazy" alt="Fintech" />
             <div class="overlay">
               <h3>Fintech</h3>
               <p>This project was about smooth app and user experience.</p>
             </div>
           </div>
           <div class="work-item" data-category="frontend uiux">
-            <img src="images/image3.png" loading="lazy" alt="Web App" />
+            <img src="Images/image3.png" loading="lazy" alt="Web App" />
             <div class="overlay">
               <h3>Web App UI/UX Design</h3>
               <p>Project focused on Web UI/UX and product interface.</p>
             </div>
           </div>
           <div class="work-item" data-category="design frontend">
-            <img src="images/image4.png" loading="lazy" alt="Edtech" />
+            <img src="Images/image4.png" loading="lazy" alt="Edtech" />
             <div class="overlay">
               <h3>Edtech</h3>
               <p>This project was about learning platform interfaces.</p>
             </div>
           </div>
           <div class="work-item" data-category="design app">
-            <img src="images/image5.jpg" loading="lazy" alt="Media & Entertainment" />
+            <img src="Images/image5.jpg" loading="lazy" alt="Media & Entertainment" />
             <div class="overlay">
               <h3>Media & Entertainment</h3>
               <p>This project focused on social media and engagement.</p>
@@ -256,7 +256,7 @@ interactive web <br> experience using frontend modern technology.</p>
     <section id="skills" class="skills-section">
       <div class="container">
         <div class="skills-header">
-          <img src="images/logo 1.png" alt="Prince Creative Graphics" class="skills-image" loading="lazy">
+          <img src="Images/logo 1.png" alt="Prince Creative Graphics" class="skills-image" loading="lazy">
           <h2 class="section-title" style="font-size: 2rem;">My Skills</h2>
           <p class="section-subtitle">
             Here are the creative and technical skills I’ve mastered through consistent learning and experience.
@@ -313,21 +313,21 @@ interactive web <br> experience using frontend modern technology.</p>
 
   <div class="testimonial-container">
     <div class="testimonial-slide active">
-      <img src="images/client1.jpg" alt="Client 1" class="client-img" loading="lazy">
+      <img src="Images/client1.jpg" alt="Client 1" class="client-img" loading="lazy">
       <h3>Sarah Johnson</h3>
       <h4>CEO, DesignHub</h4>
       <p>"Prince Creative Graphics completely transformed our brand image. His attention to detail and creative flair are unmatched!"</p>
     </div>
 
     <div class="testimonial-slide">
-      <img src="images/client2.jpg" alt="Client 2" class="client-img" loading="lazy">
+      <img src="Images/client2.jpg" alt="Client 2" class="client-img" loading="lazy">
       <h3>Michael Lee</h3>
       <h4>Marketing Director, BrightAds</h4>
       <p>"Professional, timely, and extremely talented. Working with Prince was one of the best design experiences we’ve had."</p>
     </div>
 
     <div class="testimonial-slide">
-      <img src="images/client1.jpg" alt="Client 3" class="client-img" loading="lazy">
+      <img src="Images/client1.jpg" alt="Client 3" class="client-img" loading="lazy">
       <h3>Emily Carter</h3>
       <h4>Founder, StartUpWave</h4>
       <p>"His designs perfectly captured our vision. Every project was delivered above expectations!"</p>
@@ -350,7 +350,7 @@ interactive web <br> experience using frontend modern technology.</p>
 
   <div class="blog-grid">
     <div class="blog-card">
-      <img src="images/blog1.jpg" alt="Blog 1" loading="lazy">
+      <img src="Images/blog1.jpg" alt="Blog 1" loading="lazy">
       <div class="blog-content">
         <h3>Designing with Purpose</h3>
         <p>Learn how to create visuals that truly connect with your audience through intentional design choices.</p>
@@ -359,7 +359,7 @@ interactive web <br> experience using frontend modern technology.</p>
     </div>
 
     <div class="blog-card">
-      <img src="images/blog2.jpg" alt="Blog 2" loading="lazy">
+      <img src="Images/blog2.jpg" alt="Blog 2" loading="lazy">
       <div class="blog-content">
         <h3>Color Theory for Creatives</h3>
         <p>Explore how colors influence emotion and perception in graphic design projects.</p>
@@ -368,7 +368,7 @@ interactive web <br> experience using frontend modern technology.</p>
     </div>
 
     <div class="blog-card">
-      <img src="images/blog3.jpg" alt="Blog 3" loading="lazy">
+      <img src="Images/blog3.jpg" alt="Blog 3" loading="lazy">
       <div class="blog-content">
         <h3>Brand Identity Essentials</h3>
         <p>Tips and tools for building a memorable brand that stands out in the digital space.</p>
